--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,11 +259,11 @@ i.fas {
 /* past-projects gallery on index.html */
 
 div.gallery {
-    border: 1px solid #9F886B;
+    border: 1px solid #0B2838;
 }
 
 div.gallery:hover {
-    border: 1px solid #0B2838;
+    border: 1px solid #8c0e0f;
 }
 
 div.gallery img {
@@ -868,9 +868,9 @@ input[type=submit]:hover {
     }
 }
 
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 1024px) {
     .responsive {
-      width: 49.99999%;
+      width: 48%;
       margin: 6px 0;
     }
   }
