--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -561,7 +561,7 @@ div.desc {
 
 .list-container {
     width: 250px;
-    height: 130px;
+    height: 145px;
     margin: 0 auto;
     margin-bottom: 25px;
     padding: 20px;
@@ -573,8 +573,8 @@ div.desc {
 }
 
 .list {
-    color: #2F5596;
     text-align: center;
+    font-size: 110%;
 }
 
 
