--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -850,7 +850,7 @@ input[type=submit]:hover {
         padding-left: 20px;
     }
 
-    /*planning.html - when the screen is less than 599px wide the list box height increases slightly */
+    /*planning.html - when the screen is less than 599px the list box height increases slightly */
     .list-container {
         width: 250px;
         height: 150px;
@@ -903,6 +903,12 @@ input[type=submit]:hover {
     .Rtable-cell {
             padding: 0.6em;
             font-size: 80%;
+    }
+
+    /*planning.html - the list box height increases slightly */
+    .list-container {
+        width: 250px;
+        height: 150px;
     }
 }
 
