--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ div.desc {
 .responsive {
     display: flex;
     flex-wrap: wrap;
-    padding: 5px, 5px;
+    padding: 5px;
     float: left;
     width: 24.99999%;
 }
@@ -712,7 +712,7 @@ div.desc {
 
 .form-title>h4 {
     color: #9F886B;
-    font: "Raleway", sans-serif;
+    font-family: "Raleway", sans-serif;
     font-size: 24px;
 }
 
