add custom 404 page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -790,6 +790,11 @@ input[type=submit]:hover {
     clear: both;
 }
 
+/* 404.html */
+
+.text-container a {
+    text-decoration: underline;
+}
 /* Media Queries */
 
 /* Responsive layout @media queries max-width 599px */
