--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,10 +82,10 @@ h2 {
 }
 
 #hero-image-home {
-    height: 100vh;
-    width: 100vw;
-    display: table-cell;
-    vertical-align: middle;
+    height: 100%;
+    width: 100%;
+    display: block;
+    margin: 0 auto;
     background: url('../images/skyscrapers-1081737_1920.jpg');
     /* Create parallax scrolling effect */
     /* Parallax scrolling code from W3Schools https://www.w3schools.com/howto/howto_css_parallax.asp */
@@ -511,8 +511,10 @@ div.desc {
 /* planning.html */
 
 #plan-hero-image-home {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    display: block;
+    margin: 0 auto;
     background: url('../images/pexels-laura-tancredi-7078691.jpg');
     /* Create parallax scrolling effect */
     background-attachment: fixed;
@@ -582,6 +584,8 @@ div.desc {
 #tactics-hero-image-home {
     height: 100%;
     width: 100%;
+    display: block;
+    margin: 0 auto;
     background: url('../images/pexels-sevenstorm-juhaszimrus-1603288.jpg');
     /* Create parallax scrolling effect */
     background-attachment: fixed;
@@ -815,10 +819,10 @@ input[type=submit]:hover {
 /* 404.html */
 
 #hero-image-404 {
-    height: 100vh;
-    width: 100vw;
-    display: table-cell;
-    vertical-align: middle;
+    height: 100%;
+    width: 100%;
+    display: block;
+    margin: 0 auto;
     background: url('../images/skyscrapers-1081737_1920.jpg');
     /* Create parallax scrolling effect */
     /* Parallax scrolling code from W3Schools https://www.w3schools.com/howto/howto_css_parallax.asp */
