--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -718,7 +718,7 @@ div.desc {
 }
 
 .contact-right-side {
-    padding-top: 50px;
+    padding-top: 100px;
     padding-right: 50px;
     background-color: #0b2838;
     width: 50%;
@@ -740,6 +740,18 @@ div.desc {
     color: #dde2c6;
     font-family: "Raleway", sans-serif;
     font-size: 24px;
+}
+
+.form-text {
+    padding-top: 20px;
+}
+
+.form-text>h4 {
+    color: white;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 34px;
+    font-family: "Raleway", sans-serif;
 }
 
 * {
