--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -568,11 +568,10 @@ div.desc {
     border: 3px solid #8c0e0f;
     border-radius: 25px;
     box-shadow: 10px 5px 5px #0b2838;
-    text-align: center;
 }
 
 .list {
-    text-align: center;
+    text-align: left;
     font-size: 110%;
 }
 
@@ -914,12 +913,6 @@ input[type=submit]:hover {
         padding-left: 20px;
     }
 
-    /*planning.html - when the screen is less than 599px the list box height increases slightly */
-    .list-container {
-        width: 250px;
-        height: 170px;
-    }
-
     /*Tactics.html - when the screen is less than 599px wide the table rows display as a column and the table headings are hidden */
 
     th {
@@ -982,12 +975,6 @@ input[type=submit]:hover {
     .Rtable-cell {
         padding: 0.6em;
         font-size: 80%;
-    }
-
-    /*planning.html - the list box height increases slightly */
-    .list-container {
-        width: 250px;
-        height: 170px;
     }
 }
 
